--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -236,7 +236,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="{{ path('tipo_imovel_index') }}">
                                                 <i class="ti-write"></i>
                                                 <span class="menu-title">Tipos de Imóveis</span>
                                             </a>
