Crud de clientes e import de estados e cidades

--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -200,7 +200,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="{{ path('pessoa_index') }}">
                                                 <i class="ti-face-smile"></i>
                                                 <span class="menu-title">Clientes</span>
                                             </a>
