--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -206,7 +206,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="{{ path('imovel_index') }}">
                                                 <i class="ti-home"></i>
                                                 <span class="menu-title">Imóveis</span>
                                             </a>
