--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -230,7 +230,7 @@
                                         <li class="list-header">Configurações</li>
 
                                         <li>
-                                            <a href="#">
+                                            <a href="{{ path('imobiliaria_atuacao_index') }}">
                                                 <i class="ti-map-alt"></i>
                                                 <span class="menu-title">Cidades</span>
                                             </a>
