--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -13,7 +13,8 @@
         <link href="{{ asset('css/nifty.css') }}" rel="stylesheet">
         <link href="{{ asset('css/pace.css') }}" rel="stylesheet">
         <link href="{{ asset('css/themify-icons.css') }}" rel="stylesheet">
-        <link href="{{ asset('css/all.css') }}" rel="stylesheet">
+        <link href="{{ asset('css/dropzone.css') }}" rel="stylesheet" />
+        {# <link href="{{ asset('css/all.css') }}" rel="stylesheet"> #}
 
     </head>
 
@@ -298,8 +299,9 @@
             <script src="{{ asset('js/jquery_002.js') }}"></script>
             <script src="{{ asset('js/bootstrap.js') }}"></script>
             <script src="{{ asset('js/nifty.js') }}"></script>
-            <script src="{{ asset('js/all.js') }}"></script>
+            <script src="{{ asset('js/dropzone.js') }}"></script>
+            {# <script src="{{ asset('js/all.js') }}"></script> #}
 
-        </body>
+        {% block extrajavascript %}{% endblock %}
     </body>
-</html></body></html></body></html>
+</html>
