--- a/templates/tipo_imovel/index.html.twig
+++ b/templates/tipo_imovel/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Tipo de Imóvel</h1>
 
-    <table class="table">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Nome</th>
