--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -43,53 +43,7 @@
                     <!--Navbar Dropdown-->
                     <div class="navbar-content">
 
-                        <ul
-                            class="nav navbar-top-links">
-
-                            <!--Notification dropdown-->
-                            <li class="dropdown">
-                                <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-                                    <i class="ti-bell"></i>
-                                    <span class="badge badge-header badge-danger"></span>
-                                </a>
-
-                                <!--Notification dropdown menu-->
-                                <div class="dropdown-menu dropdown-menu-md dropdown-menu-right">
-                                    <div class="nano scrollable has-scrollbar" style="height: 0px;">
-                                        <div class="nano-content" tabindex="0" style="right: -17px;">
-                                            <ul class="head-list">
-                                                <li>
-                                                    <a href="#" class="media add-tooltip" data-title="Used space : 95%" data-container="body" data-placement="bottom" data-original-title="" title="">
-                                                        <div class="media-left">
-                                                            <i class="ti-harddrive icon-2x text-main"></i>
-                                                        </div>
-                                                        <div class="media-body">
-                                                            <p class="text-nowrap text-main text-semibold">HDD is full</p>
-                                                            <div class="progress progress-sm mar-no">
-                                                                <div style="width: 95%;" class="progress-bar progress-bar-danger">
-                                                                    <span class="sr-only">95% Complete</span>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div class="nano-pane" style="display: none;">
-                                            <div class="nano-slider" style="height: 20px; transform: translate(0px);"></div>
-                                        </div>
-                                    </div>
-
-                                    <!--Dropdown footer-->
-                                    <div class="pad-all bord-top">
-                                        <a href="#" class="btn-link text-main box-block">
-                                            <i class="pci-chevron chevron-right pull-right"></i>Show All Notifications
-                                        </a>
-                                    </div>
-                                </div>
-                            </li>
-                            <!--End notifications dropdown-->
-
+                        <ul class="nav navbar-top-links">
 
                             <!--User dropdown-->
                             <li id="dropdown-user" class="dropdown">
