--- a/templates/pessoa/_form.html.twig
+++ b/templates/pessoa/_form.html.twig
@@ -1,4 +1,89 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<form class="form-horizontal form-padding" action="{{ path('pessoa_new') }}" method="post">
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.email.vars['id'] }}">E-mail</label>
+        <div class="col-md-4">
+            {{ form_widget(form.email) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.cpf.vars['id'] }}">CPF</label>
+        <div class="col-md-4">
+            {{ form_widget(form.cpf) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.rg.vars['id'] }}">RG</label>
+        <div class="col-md-4">
+            {{ form_widget(form.rg) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.telefonePrincipal.vars['id'] }}">Telefone Principal</label>
+        <div class="col-md-4">
+            {{ form_widget(form.telefonePrincipal) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.telefoneSecundario.vars['id'] }}">Telefone Secundario</label>
+        <div class="col-md-4">
+            {{ form_widget(form.telefoneSecundario) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.endereco.vars['id'] }}">Endereço</label>
+        <div class="col-md-4">
+            {{ form_widget(form.endereco) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.numero.vars['id'] }}">Número</label>
+        <div class="col-md-4">
+            {{ form_widget(form.numero) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.cep.vars['id'] }}">CEP</label>
+        <div class="col-md-4">
+            {{ form_widget(form.cep) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.complemento.vars['id'] }}">Complemento</label>
+        <div class="col-md-4">
+            {{ form_widget(form.complemento) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.fkEstadoId.vars['id'] }}">Estado</label>
+        <div class="col-md-4">
+            {{ form_widget(form.fkEstadoId) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.fkCidadeId.vars['id'] }}">Cidade</label>
+        <div class="col-md-4">
+            {{ form_widget(form.fkCidadeId) }}
+        </div>
+    </div>
+
+    <div class="form-group form-message-light">
+        <label class="col-md-3 control-label" for="{{ form.fkBairroId.vars['id'] }}">Bairro</label>
+        <div class="col-md-4">
+            {{ form_widget(form.fkBairroId) }}
+        </div>
+    </div>
+
+</form>
+
+<button class="btn btn-primary" type="submit">{{ button_label|default('Save') }}</button>
