--- a/templates/pessoa/edit.html.twig
+++ b/templates/pessoa/edit.html.twig
@@ -5,9 +5,45 @@
 {% block body %}
     <h1>Edit Pessoa</h1>
 
+    {# <form class="form-horizontal form-padding" action="{{ path('pessoa_edit', { 'id': entity.id }) }}" method="post"> #}
+
     {{ include('pessoa/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('pessoa_index') }}">back to list</a>
 
     {{ include('pessoa/_delete_form.html.twig') }}
+{% endblock %}
+
+{% block extrajavascript %}
+<script type="text/javascript">
+    $(document).ready( function() {
+        // Ao mudar o estado, busca as cidades referentes ao estado selecionado
+        $("#pessoa_fkEstadoId").on('change', function(){
+            
+            if (this.value != ''){
+
+                $.ajax({
+                    type: "POST",
+                    url: "{{ path('pessoa_lista_cidades') }}",
+                    cache: false,
+                    data: {
+                        'estadoId': this.value
+                    }
+                }).done(function(cities) {
+
+                    let options = '';
+                    $.each(cities, function(i, item){
+                        options += '<option value="'+item['id']+'">'+item['nome']+'</option>';
+                    });
+                    
+                    $("#pessoa_fkCidadeId").empty().append(options);
+
+                }).fail(function(){
+                    console.log( 'Falha ao buscar as cidades.' );
+                });
+
+            }
+        });
+    });
+</script>
 {% endblock %}
