--- a/templates/pessoa/new.html.twig
+++ b/templates/pessoa/new.html.twig
@@ -5,7 +5,40 @@
 {% block body %}
     <h1>Create new Pessoa</h1>
 
+{# <form class="form-horizontal form-padding" action="{{ path('pessoa_new') }}" method="post"> #}
+
     {{ include('pessoa/_form.html.twig') }}
 
     <a href="{{ path('pessoa_index') }}">back to list</a>
+{% endblock %}
+
+{% block extrajavascript %}
+<script type="text/javascript">
+    $(document).ready( function() {
+        // Ao mudar o estado, busca as cidades referentes ao estado selecionado
+        $("#pessoa_fkEstadoId").on('change', function(){
+
+            $.ajax({
+                type: "POST",
+                url: "{{ path('pessoa_lista_cidades') }}",
+                cache: false,
+                data: {
+                    'estadoId': this.value
+                }
+            }).done(function(cities) {
+
+                let options = '';
+                $.each(cities, function(i, item){
+                    options += '<option value="'+item['id']+'">'+item['nome']+'</option>';
+                });
+                
+                $("#pessoa_fkCidadeId").empty().append(options);
+
+            }).fail(function(){
+                console.log( 'Falha ao buscar as cidades.' );
+            });
+
+        });
+    });
+</script>
 {% endblock %}
