Menus de atualizacao em massa

--- a/templates/imovel/new.html.twig
+++ b/templates/imovel/new.html.twig
@@ -13,8 +13,41 @@
 
 {% block extrajavascript %}
 <script type="text/javascript">
-    $(document).ready(function() {
+    $(document).ready( function() {
+        // Ao mudar o estado, busca as cidades referentes ao estado selecionado
+        $("#imovel_fkEstadoId").on('change', function(){
 
+            $.ajax({
+                type: "POST",
+                url: "{{ path('pessoa_lista_cidades') }}",
+                cache: false,
+                data: {
+                    'estadoId': this.value
+                }
+            }).done(function(cities) {
+
+                let options = '';
+                $.each(cities, function(i, item){
+                    options += '<option value="'+item['id']+'">'+item['nome']+'</option>';
+                });
+                
+                $("#imovel_fkCidadeId").empty().append(options);
+
+            }).fail(function(){
+                console.log( 'Falha ao buscar as cidades.' );
+            });
+
+        });
+
+        // $('input[type="submit"]').on('click', function submitForms(){
+        //     $('#form-imovel').submit();
+        //     $('#form-dropzone').submit();
+        // });
+    });
+</script>
+{% endblock %}
+
+{# 
         // Dropzone.options.dropzonejs = {
         // var myDropzone = new Dropzone("div#myDropzone", {
         //     url: "{{ path('imovel_new') }}",
@@ -36,6 +69,4 @@
 
         console.log(Dropzone);
 
-    });
-</script>
-{% endblock %}
+    }); #}
