--- a/templates/imovel/_form.html.twig
+++ b/templates/imovel/_form.html.twig
@@ -1,4 +1,4 @@
-<form class="form-horizontal form-padding" action="{{ path('imovel_new') }}" method="post">
+<form id="form-imovel" class="form-horizontal form-padding" method="post">
 
     <div class="form-group form-message-light">
         <label class="col-md-3 control-label" for="{{ form.titulo.vars['id'] }}">Título</label>
@@ -168,9 +168,11 @@
         </div>
     </div>            			        
 
+    <button class="btn btn-primary" type="submit">{{ button_label|default('Save') }}</button>
+
 </form>
 
-<form id="demo-dropzone" action="{{ path('file_input') }}" class="dropzone">
+<form id="form-dropzone" action="{{ path('file_input') }}" class="dropzone">
     <div class="dz-default dz-message">
         <div class="dz-icon">
             <i class="ti-cloud-up icon-5x"></i>
@@ -184,5 +186,3 @@
         <input name="file" type="file" multiple>
     </div>
 </form>
-
-<button class="btn btn-primary" type="submit">{{ button_label|default('Save') }}</button>
