--- a/templates/imovel/edit.html.twig
+++ b/templates/imovel/edit.html.twig
@@ -11,3 +11,34 @@
 
     {{ include('imovel/_delete_form.html.twig') }}
 {% endblock %}
+
+{% block extrajavascript %}
+<script type="text/javascript">
+    $(document).ready( function() {
+        // Ao mudar o estado, busca as cidades referentes ao estado selecionado
+        $("#imovel_fkEstadoId").on('change', function(){
+
+            $.ajax({
+                type: "POST",
+                url: "{{ path('pessoa_lista_cidades') }}",
+                cache: false,
+                data: {
+                    'estadoId': this.value
+                }
+            }).done(function(cities) {
+
+                let options = '';
+                $.each(cities, function(i, item){
+                    options += '<option value="'+item['id']+'">'+item['nome']+'</option>';
+                });
+                
+                $("#imovel_fkCidadeId").empty().append(options);
+
+            }).fail(function(){
+                console.log( 'Falha ao buscar as cidades.' );
+            });
+
+        });
+    });
+</script>
+{% endblock %}
