--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -167,13 +167,13 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="{{ path('atualizar_venda') }}">
                                                 <i class="ti-money"></i>
                                                 <span class="menu-title">Atualizar Vendas</span>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="{{ path('atualizar_locacao') }}">
                                                 <i class="ti-pin-alt"></i>
                                                 <span class="menu-title">Atualizar Locações</span>
                                             </a>
