--- a/templates/imobiliaria_atuacao/_form.html.twig
+++ b/templates/imobiliaria_atuacao/_form.html.twig
@@ -1,4 +1,4 @@
-<form class="form-horizontal form-padding" action="{{ path('imobiliaria_atuacao_new') }}" method="post">
+<form class="form-horizontal form-padding" method="post">
 
     <div class="form-group form-message-light">
         <label class="col-md-3 control-label" for="{{ form.fkImobiliariaId.vars['id'] }}">Imobiliária</label>
@@ -21,6 +21,6 @@
         </div>
     </div>
 
-</form>
+    <button class="btn btn-primary" type="submit">{{ button_label|default('Save') }}</button>
 
-<button class="btn btn-primary" type="submit">{{ button_label|default('Save') }}</button>
+</form>
