--- a/templates/imobiliaria_atuacao/new.html.twig
+++ b/templates/imobiliaria_atuacao/new.html.twig
@@ -9,3 +9,35 @@
 
     <a href="{{ path('imobiliaria_atuacao_index') }}">back to list</a>
 {% endblock %}
+
+{% block extrajavascript %}
+<script type="text/javascript">
+    $(document).ready( function() {
+        // Ao mudar o estado, busca as cidades referentes ao estado selecionado
+        $("#imobiliaria_atuacao_fkEstadoId").on('change', function(){
+
+            $.ajax({
+                type: "POST",
+                url: "{{ path('pessoa_lista_cidades') }}",
+                cache: false,
+                data: {
+                    'estadoId': this.value
+                }
+            }).done(function(cities) {
+
+                let options = '';
+                $.each(cities, function(i, item){
+                    options += '<option value="'+item['id']+'">'+item['nome']+'</option>';
+                });
+                
+                $("#imobiliaria_atuacao_fkCidadeId").empty().append(options);
+
+            }).fail(function(){
+                console.log( 'Falha ao buscar as cidades.' );
+            });
+
+        });
+
+    });
+</script>
+{% endblock %}
