--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -15,6 +15,7 @@
         <link href="{{ asset('css/themify-icons.css') }}" rel="stylesheet">
         <link href="{{ asset('css/dropzone.css') }}" rel="stylesheet" />
         {# <link href="{{ asset('css/all.css') }}" rel="stylesheet"> #}
+        {% block extracss %}{% endblock %}
 
     </head>
 
