--- a/templates/layout-admin.html.twig
+++ b/templates/layout-admin.html.twig
@@ -198,13 +198,13 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="{{ path('destaque_index') }}">
                                                 <i class="ti-star"></i>
                                                 <span class="menu-title">Destaques</span>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="{{ path('user_index') }}">
                                                 <i class="ti-unlock"></i>
                                                 <span class="menu-title">Gerenciar Usuários</span>
                                             </a>
