--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,9 +1,21 @@
-{% extends 'base.html.twig' %}
+<!DOCTYPE html>
+<html lang="pt-BR">
 
-{% block title %}Log in!{% endblock %}
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-{% block body %}
-<form method="post">
+    <title>Tudo Imóveis</title>
+
+    <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/nifty.css') }}" rel="stylesheet">
+
+</head>
+
+<body>
+    <div id="container" class="cls-container">
+
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
@@ -13,30 +25,43 @@
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
+        
+		<!-- LOGIN FORM -->
+		<!--===================================================-->
+		<div class="cls-content">
+		    <div class="cls-content-sm panel">
+		        <div class="panel-body">
+		            <div class="mar-ver pad-btm">
+		                <h1 class="h3">Acesso administrativo</h1>
+		                <p>Entre com sua conta</p>
+		            </div>
+		            <form method="post">
+		                <div class="form-group">
+                            <input type="email" class="form-control" placeholder="Email" value="{{ last_username }}" name="email" id="inputEmail" required autofocus>
+		                </div>
+		                <div class="form-group">
+                            <input type="password" class="form-control" name="password" id="inputPassword" placeholder="Senha" required>
+		                </div>
+                        <input type="hidden" name="_csrf_token"
+                                value="{{ csrf_token('authenticate') }}"
+                        >
+		                <button class="btn btn-primary btn-lg btn-block" type="submit">Entrar</button>
+		            </form>
+		        </div>
+		
+		        <div class="pad-all">
+		            <a href="#" class="btn-link mar-rgt">Esqueceu a senha?</a>
+		
+		        </div>
+		    </div>
+		</div>
+		
+    </div>
+        
+    <!--JAVASCRIPT-->
+    <script src="{{ asset('js/jquery.min.js') }}"></script>
+    <script src="{{ asset('js/bootstrap.js') }}"></script>
+    <script src="{{ asset('js/nifty.js') }}"></script>
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
-{% endblock %}
+</body>
+</html>
